--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\keche\\eclipse-workspace\\Princeton Algorithms Library\\algs4.jar","type":"JAR","hints":{}},"ABSENT"]]
+[[{"location":"C:\\Users\\keche\\Documents\\GitHub\\AlgorithmsPart1\\AlgorithmsPart1","type":"PROJECT","hints":{"PROJECT_NAME":"AlgorithmsPart1"}},"ABSENT"]]
